--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "expo": "^49.0.3",
-    "expo-status-bar": "~1.6.0",
+    "@expo/metro-runtime": "^3.1.1",
+    "expo": "^50.0.0",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.73.2",
+    "react-native-reanimated": "~3.6.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.2.45",
     "@types/react-native": "~0.70.6",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
@@ -29,7 +31,7 @@
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.3",
-    "typescript": "5.1.3"
+    "typescript": "^5.3.0"
   },
   "private": true
 }
