--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
-    "expo": "~50.0.8",
+    "@shopify/react-native-skia": "0.1.221",
+    "expo": "~50.0.11",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
