--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
-    "@shopify/react-native-skia": "0.1.221",
-    "expo": "~50.0.17",
-    "expo-status-bar": "~1.11.1",
+    "@expo/metro-runtime": "~3.2.1",
+    "@shopify/react-native-skia": "1.2.3",
+    "expo": "^51.0.9",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-web": "~0.19.6"
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~18.2.45",
+    "@babel/core": "^7.24.0",
+    "@types/react": "~18.2.79",
     "@types/react-native": "~0.70.6",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
