--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
-    "@shopify/react-native-skia": "1.5.0",
-    "expo": "~52.0.38",
-    "expo-font": "~13.0.4",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-web": "~0.19.13"
+    "@expo/metro-runtime": "~5.0.4",
+    "@shopify/react-native-skia": "2.0.0-next.4",
+    "expo": "53.0.9",
+    "expo-font": "~13.3.1",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-native": "~0.70.6",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
@@ -34,7 +34,7 @@
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.3",
-    "typescript": "^5.3.0"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
