--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "boilerplate",
+  "name": "curves",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index",
+  "scheme": "curves",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "postinstall": "yarn setup-skia-web && node path-fs-canvaskit-postinstall.js"
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
     "@shopify/react-native-skia": "2.0.0-next.4",
     "expo": "53.0.9",
+    "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
+    "expo-linking": "~7.1.4",
+    "expo-router": "~5.0.6",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
