--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
     "@shopify/react-native-skia": "2.0.0-next.4",
+    "color": "^5.0.0",
     "expo": "53.0.9",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/color": "^4.2.0",
     "@types/react": "~19.0.10",
     "@types/react-native": "~0.70.6",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
