--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,5 @@
 {
-    "buildCommand": "expo export -p web",
-    "outputDirectory": "dist/client",
-    "functions": {
-      "api/index.ts": {
-        "runtime": "@vercel/node@3.0.11",
-        "includeFiles": "dist/server/**"
-      }
-    },
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/api/index.ts"
-      }
-    ]
+    "buildCommand": "yarn install && yarn predeploy",
+    "outputDirectory": "dist"
   }
   
