refactor: update app name and slug to 'motion' in app.json and package.json, and adjust path in postinstall script for improved module resolution

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "curves",
-    "slug": "curves",
+    "name": "Motion",
+    "slug": "motion",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
