--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.6",
     "expo-status-bar": "~2.2.3",
+    "jotai": "^2.12.4",
+    "lodash.debounce": "^4.0.8",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
